# fibril

./: .dockerignore  .env.website.example  .gitignore  ADAPTIVE_TUNABLES.md  ADMIN_OPERATIONS_SURFACE_AUDIT.md  AUDITS.md  BENCHMARKING.md  CHANGELOG.md  COORDINATION_TRYOUT.md  Cargo.toml  DESIGN_NOTES.md  Dockerfile  FOLLOWUPS.md  GANGLION_INTEGRATION_BOUNDARY_AUDIT.md  GATE3_RECONNECT_PLAN.md  LOW_LATENCY_DURABILITY_PLAN.md  MEMORY_AUDIT.md  PERFORMANCE_SENSITIVE_PATHS_AUDIT.md  PERF_AUDIT_HOT_PATHS.md  PIPELINE_AUDIT.md  PUBLISHING.md  RACE_WINDOWS.md  README.md  REPLICATION_PLANNING.md  REPLICATION_TRANSITION_SAFETY_AUDIT.md  REPLICATION_WORKLOG.md  SECURITY_CA_PIN_FIX.md  SINGLE_NODE_GUARDRAIL_AUDIT.md  STALE_TAG_104_PLAN.md  STREAM_PARITY_AUDIT.md  STREAM_REPLICATION_DESIGN.md  TODO.md  TODOTHOUGHTS.md  compose.cluster.example.yaml  compose.server.example.yaml  compose.viz.example.yaml  compose.website.deploy.yaml  fibril.example.toml
.github/workflows/: client-vocab-lint.yaml  csharp-client-ci.yaml  deploy-website.yaml  go-client-ci.yaml  python-client-ci.yaml  release.yaml  rust-ci.yaml  typescript-client-ci.yaml  website-ci.yaml
archive/: API_CONSISTENCY_AUDIT.md  PARALLEL_PUBLISH_AUDIT.md  SECURITY_CA_PIN_FIX.md  admin-mockup-reference.html
archive/replication-sharding-plan/: LOCK_USAGE_AUDIT.md  RACE_WINDOWS.md  REPLICATION_TRANSITION_SAFETY_AUDIT.md  RUNTIME_SETTINGS_GANGLION_AUDIT.md  TODOTHOUGHTS.md  USER_FACING_DOCUMENTATION_SHAPE_AUDIT.md
benches/: Cargo.toml  basic.rs  bench_e2e.rs  publish_throughput.rs
clients/: API_CONSISTENCY_AUDIT.md  ARCHITECTURE.md  FEATURE_MATRIX.md  PYTHON_CLIENT_PLAN.md  bench-plexus-fanout.sh  error_guides.json  vocab-lint.sh  wire_vectors.json
clients/csharp/: Fibril.slnx
clients/go/: GO_CLIENT_PLAN.md  catalogue.go  client.go  client_test.go  close.go  codec.go  codec_test.go  cohort_test.go  confirmation_test.go  ctx_test.go  delivery.go  delivery_test.go  engine.go  engine_test.go  error_guides_test.go  errors.go  fanin.go  fanin_test.go  go.mod  growth_test.go  message.go  message_test.go  messages.go  messages_ext.go  mtls_test.go  ops.go  ops_ext.go  pattern.go  pattern_test.go  pipeline_test.go  prune_test.go  publisher.go  reconcile.go  reconcile_test.go  reconnect_test.go  retry_test.go  stream_test.go  supervise.go  supervise_test.go  tlsconn.go  (+4 more)
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/examples/: bench_plexus.py  bench_publish.py  bench_pubsub.py  blocking.py  confirmed_delayed.py  manual_ack_retry.py  pattern_subscribe.py  publish.py  run-all.sh  stream.py  subscribe.py
clients/python/src/fibril/: __init__.py  blocking.py  client.py  codec.py  engine.py  errors.py  frames.py  message.py  protocol.py  publisher.py  routing.py  subscription.py  wire.py
clients/python/src/fibril/internal/: __init__.py  bounded_queue.py  retry.py  topology.py
clients/python/tests/: fake_broker.py  test_blocking.py  test_client.py  test_codec.py  test_engine.py  test_error_guides.py  test_frames.py  test_optional_msgpack.py  test_routing.py  test_scaffold.py  test_tls.py  test_topology.py  test_wire.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
crates/admin/: Cargo.toml
crates/admin/admin-ui/css/: admin.css
crates/admin/admin-ui/js/: admin.js  api.js  tendrils.js
crates/admin/src/: attention.rs  audit.rs  auth.rs  events.rs  history.rs  lib.rs  metrics_route.rs  prometheus.rs  routes.rs  server.rs  setup.rs
crates/admin/templates/: layout.html
crates/admin/templates/pages/: 404.html  activity.html  connections.html  diagnostics.html  dlq.html  login.html  messages.html  overview.html  queue.html  queues.html  security.html  settings.html  streams.html  subscriptions.html  topology.html
crates/broker/: Cargo.toml  build.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/benches/: e2e_c.rs
crates/client/examples/: confirmed_delayed.rs  manual_ack_retry.rs  pattern_subscribe.rs  roundtrip.rs  stream.rs
crates/client/src/: failover.rs  lib.rs  routing.rs  tls.rs
crates/client/tests/: auth_client.rs  error_guides.rs  redirect.rs  tls_client.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/compat-fixture-gen/: Cargo.toml
crates/compat-fixture-gen/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/coordination-ganglion/: Cargo.toml
crates/coordination-ganglion/examples/: coordination_demo.rs
crates/coordination-ganglion/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: bistro.rs  clock.rs  data.rs  freight.rs  hotels.rs  main.rs  pace.rs  telemetry.rs
crates/fibril/: Cargo.toml
crates/fibril/src/: lib.rs  raft_tls.rs  tls.rs
crates/fibril/tests/: broker_tests.rs  metrics_endpoint.rs  raft_tls.rs  storage_tests.rs  tls_listener.rs  user_admin.rs
crates/fibril/tests/common/: mod.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/benches/: e2e.rs  encode.rs
crates/protocol/src/v1/: client.rs  frame.rs  handler.rs  helper.rs  mod.rs  replication.rs  replication_payload.rs  replication_stream.rs  session_store.rs  wire.rs
crates/protocol/tests/: handler_tests.rs  simulation_tests.rs  wire_vectors.rs
crates/storage/: Cargo.toml
crates/tls/: Cargo.toml
crates/tls/src/: lib.rs
crates/tui-example/: Cargo.toml  REWORK_PLAN.md
crates/util/: Cargo.toml
crates/util/src/: lib.rs  net.rs  sniff.rs
crates/wire/: Cargo.toml
crates/wire/src/: helper.rs  lib.rs  wire.rs
scripts/: README.md  bench-e2e-c.sh  bench-matrix.sh  bench-results-table.sh  bench-steady-c.sh  bench-stream.sh  check-template-js.sh  check.sh  ci-stroma-source.sh  cluster-tryout.sh  coordination-playground.sh  fsync-probe.py  gen-compat-fixture.sh  memory-audit.sh  release-all.sh  release.sh  scenario.sh  stroma-source.sh
scripts/scenarios/: README.md  (+6 more)
src/: lib.rs
tests/: broker_tests.rs  storage_tests.rs
website/: Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json
(+345 files in other folders)
