[workspace]
members = [
    "crates/util",
    "crates/admin",
    "crates/client",
    "crates/cli",
    "crates/config",
    "crates/protocol",
    "crates/storage",
    "crates/common",
    "crates/broker",
    "crates/fibril",
    "crates/metrics",
    "crates/tui-example",
    "crates/coordination-ganglion",
    "benches",
]

resolver = "3"

[workspace.metadata.sovereignty]
ai-training = "prohibited"
policy-url = "https://github.com/axmouth/fibril/blob/main/AI_POLICY.md"

# Local development uses the sibling Keratin checkout while committed
# dependency lines stay git-sourced for CI, Docker, and release builds.
[patch."https://github.com/Axmouth/keratin.git"]
stroma-core = { path = "../keratin/stroma/core" }
stroma-common = { path = "../keratin/stroma/common" }
keratin-log = { path = "../keratin/keratin-log" }
