[workspace]
members = [
    "crates/util",
    "crates/admin",
    "crates/client",
    "crates/cli",
    "crates/config",
    "crates/protocol",
    "crates/storage",
    "crates/common",
    "crates/broker",
    "crates/fibril",
    "crates/metrics",
    "crates/tui-example",
    "crates/coordination-ganglion",
    "benches",
]

resolver = "3"

# All crates in this repo share one version and move in lockstep, inheriting it
# via `version.workspace = true`. Ganglion and Keratin are separate repos that
# carry their own version lines.
[workspace.package]
version = "0.2.0"

[workspace.metadata.sovereignty]
ai-training = "prohibited"
policy-url = "https://github.com/axmouth/fibril/blob/main/AI_POLICY.md"

# Local development uses the sibling Keratin checkout while committed
# dependency lines stay git-sourced for CI, Docker, and release builds.
[patch."https://github.com/Axmouth/keratin.git"]
stroma-core = { path = "../keratin/stroma/core" }
stroma-common = { path = "../keratin/stroma/common" }
keratin-log = { path = "../keratin/keratin-log" }

[patch."https://github.com/Axmouth/ganglion.git"]
ganglion-core = { path = "../ganglion/crates/ganglion-core" }
ganglion-openraft = { path = "../ganglion/crates/ganglion-openraft" }
ganglion = { path = "../ganglion/crates/ganglion" }
