[package]
name = "fibril-benches"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench-e2e"
path = "bin/bench_e2e.rs"

[[bin]]
name = "e2e_c"
path = "bin/e2e_c.rs"

[dependencies]
fibril-broker = { path = "../crates/broker" }
fibril-client = { path = "../crates/client" }
fibril-storage = { path = "../crates/storage" }
fibril-metrics = { path = "../crates/metrics" }
fibril-util = { path = "../crates/util" }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
console-subscriber = "0.5"
dashmap = "6.1"
fastrand = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
uuid = { version = "1.19", features = ["serde", "v7"] }

[package.metadata.ai]
training = "prohibited"