[package]
name = "fibril-admin"
version.workspace = true
edition = "2024"
description = "Fibril admin board: HTTP API and web UI for cluster operations"
license.workspace = true
repository.workspace = true

[dependencies]
fibril-broker = { path = "../broker" }
fibril-protocol = { path = "../protocol" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
askama = { version = "0.15" }
async-trait = "0.1"
axum = "0.8"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
base64 = "0.22"
dashmap = "6.0"
fastrand = "2"
futures = "0.3"
http = "1.4"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
mime_guess = "2.0"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
rust-embed = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
uuid = { version = "1.19", features = ["v7"] }

[dev-dependencies]
tokio-util = { version = "0.7", features = ["codec"] }

[package.metadata.ai]
training = "prohibited"
