[package]
name = "fibril-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fibrilctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fibril-client = { path = "../client" }
fibril-config = { path = "../config" }
tokio = { version = "1", features = ["full"] }

[package.metadata.ai]
training = "prohibited"
