[package]
name = "fibril-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fibrilctl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fibril-client = { path = "../client" }
fibril-config = { path = "../config" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[package.metadata.ai]
training = "prohibited"
