[package]
name = "fibril-client"
version.workspace = true
edition = "2024"

[dependencies]
fibril-protocol = { path = "../protocol" }
fibril-broker = { path = "../broker" }
fibril-storage = { path = "../storage" }
fibril-util = { path = "../util" }
arc-swap = "1.7"
dashmap = "6.1"
fastrand = "2"
futures = "0.3"
parking_lot = "0.12"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
uuid = { version = "1.19", features = ["serde", "v7"] }

[features]
# Build the client net path against turmoil's simulated TCP via the fibril-util
# net seam, so a client can run inside a turmoil Sim. Note: the high-level
# connect() still resolves addresses via std DNS, which a sim's logical
# hostnames do not support - sim use needs a hostname-direct connect path.
simulation = ["fibril-util/simulation"]

[package.metadata.ai]
training = "prohibited"
