[package]
name = "fibril-compat-fixture-gen"
version.workspace = true
edition = "2024"

# Drives a running broker through a fixed sequence of durable operations so a
# released version's on-disk data dir can be captured as a storage back-compat
# golden fixture. Built from the current tree and pointed at a server built from
# the target release tag (the server, not this tool, writes the data dir), so it
# only uses wire operations present since that tag. See
# scripts/gen-compat-fixture.sh and crates/broker/tests/compat_fixture.rs.
[[bin]]
name = "compat-fixture-gen"
path = "src/main.rs"

[dependencies]
fibril-client = { path = "../client" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[package.metadata.ai]
training = "prohibited"
