[package]
name = "fibril-config"
version.workspace = true
edition = "2024"
description = "Startup configuration for the Fibril broker"
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.5"

[package.metadata.ai]
training = "prohibited"
