[package]
name = "fibril-coordination-ganglion"
version = "0.1.0"
edition = "2021"
description = "Spike: ganglion raft-backed implementation of fibril's Coordination trait"

[dependencies]
fibril-broker = { path = "../broker" }
fibril-storage = { path = "../storage" }
ganglion-core = { path = "../../../ganglion/crates/ganglion-core" }
ganglion-openraft = { path = "../../../ganglion/crates/ganglion-openraft", features = ["openraft"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
