[package]
name = "fibril-demo"
version.workspace = true
edition = "2024"
description = "A small living world of realistic fake traffic that lights up the Fibril admin dashboard"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fake = "2"
fastrand = "2"
fibril-client = { path = "../client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[package.metadata.ai]
training = "prohibited"
