[package]
name = "fibril"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fibril-server"
path = "bin/server.rs"

[dependencies]
fibril-admin = { path = "../admin" }
fibril-broker = { path = "../broker" }
fibril-config = { path = "../config" }
fibril-protocol = { path = "../protocol" }
fibril-storage = { path = "../storage" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
fibril-coordination-ganglion = { path = "../coordination-ganglion" }
ganglion = { path = "../../../ganglion/crates/ganglion" }
anyhow = "1.0"
async-trait = "0.1"
fastrand = "2"
futures = "0.3"
mimalloc = { version = "0.1" }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"

[package.metadata.ai]
training = "prohibited"
