[package]
name = "fibril"
version.workspace = true
edition = "2024"

[[bin]]
name = "fibril-server"
path = "bin/server.rs"

[dependencies]
fibril-admin = { path = "../admin" }
fibril-broker = { path = "../broker" }
fibril-config = { path = "../config" }
fibril-protocol = { path = "../protocol" }
fibril-storage = { path = "../storage" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
fibril-coordination-ganglion = { path = "../coordination-ganglion" }
ganglion = { git = "https://github.com/Axmouth/ganglion.git", branch = "main" }
anyhow = "1.0"
async-trait = "0.1"
fastrand = "2"
futures = "0.3"
mimalloc = { version = "0.1" }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
rustls-pemfile = "2"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"

[package.metadata.ai]
training = "prohibited"
