[package]
name = "fibril-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
fibril-util = { path = "../util" }
anyhow = "1.0"
arc-swap = "1.9"
async-trait = "0.1"
dashmap = "6.1"
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.18" }
serde_json = "1.0"
sysinfo = "0.38"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
uuid = { version = "1.19", features = ["v7"] }

[package.metadata.ai]
training = "prohibited"