[package]
name = "fibril-protocol"
version = "0.1.0"
edition = "2024"
autobenches = false

[[bin]]
name = "e2e"
path = "benches/e2e.rs"

[[bench]]
name = "encode"
harness = false

[dependencies]
fibril-broker = { path = "../broker" }
fibril-storage = { path = "../storage" }
fibril-metrics = { path = "../metrics" }
fibril-util = { path = "../util" }
anyhow = "1.0"
arc-swap = "1.9"
async-trait = "0.1"
bytes = "1"
dashmap = "6.1"
futures = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
uuid = { version = "1.19", features = ["serde", "v4", "v7"] }

[features]
# Build the broker net path against turmoil's simulated TCP (via the fibril-util
# net seam) for deterministic cluster failure-path tests.
simulation = ["fibril-util/simulation"]

[dev-dependencies]
fibril-coordination-ganglion = { path = "../coordination-ganglion" }
ganglion-openraft = { git = "https://github.com/Axmouth/ganglion.git", branch = "main", features = ["openraft"] }
criterion = "0.8"
stroma-core = { git = "https://github.com/Axmouth/keratin.git", branch = "main" }

[package.metadata.ai]
training = "prohibited"
