[package]
name = "fibril-tls"
version.workspace = true
edition = "2024"
description = "TLS configuration and certificate handling for Fibril, covering server, inter-broker, and mutual TLS"
license.workspace = true
repository.workspace = true

[dependencies]
fibril-config = { path = "../config" }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring", "x509-parser"] }
arc-swap = "1.9"
fibril-util = { path = "../util" }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
sha2 = "0.10"
thiserror = "2.0"
x509-parser = "0.16"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }

[dev-dependencies]
fastrand = "2"
tokio = { version = "1", default-features = false, features = ["rt", "net", "io-util", "macros"] }

[package.metadata.ai]
training = "prohibited"
