[package]
name = "fibril-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
console-subscriber = "0.5"
fastrand = "2"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"

[package.metadata.ai]
training = "prohibited"