[package]
name = "fibril-util"
version.workspace = true
edition = "2024"

[dependencies]
async-trait = "0.1"
console-subscriber = "0.5"
fastrand = "2"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
# Deterministic-simulation network types, swapped in for tokio's under the
# `simulation` feature via the `net` seam (task #97). Off in normal builds.
turmoil = { version = "0.7", optional = true }

[features]
# Flip fibril_util::net to turmoil's simulated TcpStream/TcpListener so the whole
# stack can run inside a turmoil Sim for cluster failure-path tests.
simulation = ["dep:turmoil"]

[package.metadata.ai]
training = "prohibited"
