[package]
name = "fibril-wire"
version.workspace = true
edition = "2024"
description = "Fibril v1 wire protocol: message types and the byte-exact frame and body codec"
license.workspace = true
repository.workspace = true

[dependencies]
fibril-common = { path = "../common" }
stroma-common = { git = "https://github.com/Axmouth/keratin.git", branch = "main" }
bytes = "1"
uuid = { version = "1.19", features = ["serde", "v4", "v7"] }
thiserror = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
fibril-util = { path = "../util" }
tokio = { version = "1", features = ["net", "io-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
